# AlphaPeel-Fortran

./: .gitmodules  CMakeLists.txt  README.md  example_multiLocus_spec.txt  example_singleLocus_spec.txt  make_zip_file.sh
docs/: AlphaPeelDocs.aux  AlphaPeelDocs.tex  AlphaPeelDocs.toc  makeDocs.sh
docs/source/: index.rst
example/: AlphaPeelSpec_HD.txt  AlphaPeelSpec_SeqFromHD.txt  analyze_results.r  map.txt  masked_snp_array.txt  pedigree.txt  run_example.sh
sampleData/: AlphaMLPSpec.txt  smallsim-maskedGenotype.txt  smallsim-pedigree.txt  smallsim-trueGenotype.txt
src/: AlphaMLP.f90  AlphaMLPInputModule.f90  CMakeLists.txt  globalMLP.f90  graphs.f90  main.f90  pedigreeGraphModule.f90  secantEstimator.f90
